navidrome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3s-basalt
      containers:
        - name: navidrome
          image: deluan/navidrome:latest
          ports:
            - containerPort: 4533
              protocol: TCP
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          volumeMounts:
            - name: navidrome-config
              mountPath: /data
            - name: navidrome-music
              mountPath: /music
              readOnly: true
      volumes:
        - name: navidrome-config
          persistentVolumeClaim:
            claimName: navidrome-config
        - name: navidrome-music
          nfs:
            server: 192.168.1.126
            path: /mnt/user/Media/Music
