navidrome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
spec:
  selector:
    app: navidrome
  ports:
    - protocol: TCP
      port: 4533
      targetPort: 4533
  type: ClusterIP
